hphp/test/slow/unpack_args/unpack_call_error.php.expectf
Fatal error: Cannot use positional argument after argument unpacking in %s/unpack_call_error.php on line 10
